passing through conv2d and max pool 2d

--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -792,6 +792,88 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# creating dummy data\n",
+    "tc.manual_seed(42)\n",
+    "\n",
+    "# batch of images\n",
+    "images = tc.randn(size=(32,3,64,64))\n",
+    "test_image = images[0]\n",
+    "print(f\"Image batch shape: {images.shape}\\n{len(images)}\")\n",
+    "print(f\"Single Image shape: {test_image.shape}\")\n",
+    "print(f\"Test Image:\\n {test_image}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model2.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conv_layer = nn.Conv2d(in_channels=3,out_channels=10,kernel_size=3,stride=1,padding=0)\n",
+    "conv_output = conv_layer(test_image)\n",
+    "conv_output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.5.2.2 Stepping through the maxPool layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Test Image Original Shape: {test_image.shape}\")\n",
+    "print(f\"Test Image with unsqueeze dimension: {test_image.unsqueeze(0).shape}\")\n",
+    "\n",
+    "max_pool_layer = nn.MaxPool2d(kernel_size=2)\n",
+    "\n",
+    "# pass data through it conv layer\n",
+    "test_conv_image = conv_layer(test_image.unsqueeze(dim=0))\n",
+    "print(f\"Shape after going through conv layer: {test_conv_image.shape}\")\n",
+    "\n",
+    "# pass through max pool layer\n",
+    "test_pool_image = max_pool_layer(test_conv_image)\n",
+    "print(f\"Shape after going through conv layer and max pool layer: {test_pool_image.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tc.manual_seed(42)\n",
+    "random_tensor = tc.randn(size=(1,1,2,2))\n",
+    "\n",
+    "# create a max pool layer\n",
+    "max_pool_layer1 = nn.MaxPool2d(kernel_size=2)\n",
+    "\n",
+    "# pass the random tensor though the max pool layer\n",
+    "max_pool_tensor = max_pool_layer1(random_tensor)\n",
+    "print(f\"\\nMax pool tensor:\\n{max_pool_tensor}\")\n",
+    "print(f\"\\nMax pool tensor shape:\\n{max_pool_tensor.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
