training our convolutional model

--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -757,16 +757,16 @@
     "    \n",
     "    self.classifier = nn.Sequential(\n",
     "      nn.Flatten(),\n",
-    "      nn.Linear(in_features=hidden_units*0,out_features=output_shape)\n",
+    "      nn.Linear(in_features=hidden_units*7*7,out_features=output_shape)\n",
     "    )\n",
     "  \n",
     "  def forward(self,x):\n",
     "    x = self.conv_block_1(x)\n",
-    "    print(x.shape)\n",
+    "    # print(x.shape)\n",
     "    x = self.conv_block_2(x)\n",
-    "    print(x.shape)\n",
+    "    # print(x.shape)\n",
     "    x = self.classifier(x)\n",
-    "    print(x.shape)\n",
+    "    # print(x.shape)\n",
     "    return x"
    ]
   },
@@ -867,6 +867,94 @@
     "max_pool_tensor = max_pool_layer1(random_tensor)\n",
     "print(f\"\\nMax pool tensor:\\n{max_pool_tensor}\")\n",
     "print(f\"\\nMax pool tensor shape:\\n{max_pool_tensor.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.5.2.3 Testing our model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(image.squeeze(),cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pass image\n",
+    "rand_img_ten = tc.randn(size=(1,28,28))\n",
+    "model2(rand_img_ten.unsqueeze(0))\n",
+    "# model2.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.5.3 Training and testing our own model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimiser2 = tc.optim.SGD(params=model2.parameters(),lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tc.manual_seed(42)\n",
+    "# Measure time\n",
+    "start_time2 = timer()\n",
+    "\n",
+    "epchs = 3\n",
+    "for epch in tqdm(range(epchs)):\n",
+    "    print(f\"Epoch: {epch}\\n----\")\n",
+    "    train_step(\n",
+    "        model=model2,\n",
+    "        data_loader=train_dataloader,\n",
+    "        loss_fn=loss_fn,\n",
+    "        optimiser=optimiser2,\n",
+    "        accuracy_fn=accuracy_fn,\n",
+    "    )\n",
+    "\n",
+    "    test_step(\n",
+    "        model=model2,\n",
+    "        data_loader=test_dataloader,\n",
+    "        loss_fn=loss_fn,\n",
+    "        accuracy_fn=accuracy_fn,\n",
+    "    )\n",
+    "    \n",
+    "end_time2 = timer()\n",
+    "total_time2 = print_train_time(start=start_time2,end=end_time2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model2_results = eval_model(\n",
+    "    model=model2, data_loader=test_dataloader, loss_fn=loss_fn, accuracy_fn=accuracy_fn\n",
+    ")\n",
+    "model2_results"
    ]
   },
   {
