comparing our models

--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -958,6 +958,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.6 Comparing our models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "comparison = pd.DataFrame([model0_results,model1_results,model2_results])\n",
+    "comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding training time to comparison df\n",
+    "comparison[\"training_time\"] = [total_time0,total_time1,total_time2]\n",
+    "comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualise our model result\n",
+    "comparison.set_index(\"Model name\")[\"Model acc\"].plot(kind=\"barh\")\n",
+    "plt.xlabel(\"accuracy (%)\")\n",
+    "plt.ylabel(\"model\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
