--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -999,6 +999,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.7 Make and evaluate random predictions with the best model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_predictions(model:tc.nn.Module,data:list):\n",
+    "  pred_probs = []\n",
+    "  model.eval()\n",
+    "  with tc.inference_mode():\n",
+    "    for sample in data:\n",
+    "      # prepare smaple\n",
+    "      sample = tc.unsqueeze(sample,dim=0)\n",
+    "      \n",
+    "      # 1. forward pass\n",
+    "      pred_logit = model(sample)\n",
+    "      \n",
+    "      # get prediction probability\n",
+    "      pred_prob = tc.softmax(pred_logit.squeeze(),dim=0)\n",
+    "      \n",
+    "      # get pred_prob \n",
+    "      pred_probs.append(pred_prob)\n",
+    "      \n",
+    "  # stack the pred probs to turn list into a tensor\n",
+    "  return tc.stack(pred_probs)\n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img, label = test_data[0][:10]\n",
+    "img.shape,label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "random.seed(42)\n",
+    "test_samples = []\n",
+    "test_labels = []\n",
+    "\n",
+    "for sample,label in random.sample(list(test_data),k=9):\n",
+    "  test_samples.append(sample)\n",
+    "  test_labels.append(label)\n",
+    "  \n",
+    "# view the first 10 set\n",
+    "test_samples[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(test_samples[0].squeeze(),cmap=\"gray\")\n",
+    "plt.title(classnames[test_labels[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make predictions\n",
+    "pred_probs = make_predictions(model=model1,data=test_samples)\n",
+    "\n",
+    "# view the first 2 predictions probs\n",
+    "pred_probs[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert prediction probabilities to labels\n",
+    "pred_classes = pred_probs.argmax(dim=1)\n",
+    "pred_classes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
