visualising our model prediction

--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -1079,7 +1079,7 @@
    "outputs": [],
    "source": [
     "# Make predictions\n",
-    "pred_probs = make_predictions(model=model1,data=test_samples)\n",
+    "pred_probs = make_predictions(model=model2,data=test_samples)\n",
     "\n",
     "# view the first 2 predictions probs\n",
     "pred_probs[:2]"
@@ -1101,7 +1101,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# plot the prediction\n",
+    "plt.figure(figsize=(9,9))\n",
+    "nrows = 3\n",
+    "ncols = 3\n",
+    "\n",
+    "for i,sample in enumerate(test_samples):\n",
+    "  # create subplot\n",
+    "  plt.subplot(nrows,ncols,i+1)\n",
+    "  \n",
+    "  # plot the target image\n",
+    "  plt.imshow(sample.squeeze(),cmap=\"gray\")\n",
+    "  \n",
+    "  # find the prediction label in text form\n",
+    "  pred_label = classnames[pred_classes[i]]\n",
+    "  \n",
+    "  # get hte truth label\n",
+    "  truth_label = classnames[test_labels[i]]\n",
+    "  \n",
+    "  # create a title for the plot\n",
+    "  title_text = f\"Pred: {pred_label} | Truth: {truth_label}\"\n",
+    "  \n",
+    "  # check for equality between pred and truth and change color of the text title\n",
+    "  if pred_label == truth_label:\n",
+    "    plt.title(title_text,fontsize=10,c=\"g\")\n",
+    "  else:\n",
+    "    plt.title(title_text,fontsize=10,c=\"r\")\n",
+    "    \n",
+    "  plt.axis(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
