further evaluating with a confusion matrix

--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -1133,13 +1133,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.8 Further Evaluating with confusion matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "import torchmetrics as tcm\n",
+    "import mlxtend"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 Make predictions with trained model on test data\n",
+    "y_preds = []\n",
+    "model2.eval()\n",
+    "with tc.inference_mode():\n",
+    "  for X,y in tqdm(test_dataloader,desc=\"Making predictions...\"):\n",
+    "    # 1. forwards pass\n",
+    "    y_logit = model2(X)\n",
+    "    y_pred = tc.softmax(y_logit.squeeze(),dim=1).argmax(dim=1)\n",
+    "    y_preds.append(y_pred)\n",
+    "    \n",
+    "# concatenate the predictions\n",
+    "# print(y_preds)\n",
+    "y_pred_tensor = tc.cat(y_preds)\n",
+    "y_pred_tensor[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# making a confusion matrix\n",
+    "from torchmetrics import ConfusionMatrix\n",
+    "from mlxtend.plotting import plot_confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confmat = ConfusionMatrix(num_classes=len(classnames),task=\"multiclass\")\n",
+    "confmat_tensor = confmat(preds=y_pred_tensor,target=test_data.targets)\n",
+    "confmat_tensor\n",
+    "\n",
+    "# plot con mat\n",
+    "fig, ax = plot_confusion_matrix(conf_mat=confmat_tensor.numpy(),class_names=classnames,figsize=(10,8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
