saving and loading our model

--- a/computer_vision/vision.ipynb
+++ b/computer_vision/vision.ipynb
@@ -1197,6 +1197,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.9 Saving and Loading our model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create model directory\n",
+    "MODEL_PATH = Path(\"model\")\n",
+    "MODEL_PATH.mkdir(parents=True,exist_ok=True)\n",
+    "# model save path\n",
+    "MODEL_NAME = \"03_pytorch_computer_vision_model2.pth\"\n",
+    "MODEL_SAVE_PATH = MODEL_PATH / MODEL_NAME\n",
+    "\n",
+    "# save the model state.dict\n",
+    "print(f\"Saving model to: {MODEL_SAVE_PATH}\")\n",
+    "tc.save(obj=model2.state_dict(),f=MODEL_SAVE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a new instance\n",
+    "tc.manual_seed(42)\n",
+    "\n",
+    "loaded_model2 = FashionMNISTModelV2(input_shape=1,hidden_units=10,output_shape=len(classnames))\n",
+    "\n",
+    "# load the state_dict\n",
+    "loaded_model2.load_state_dict(tc.load(f=MODEL_SAVE_PATH))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate loaded model\n",
+    "tc.manual_seed(42)\n",
+    "\n",
+    "loaded_model2_results = eval_model(model=loaded_model2,data_loader=test_dataloader,loss_fn=loss_fn,accuracy_fn=accuracy_fn)\n",
+    "loaded_model2_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check is model result are close yo each other\n",
+    "tc.isclose(tc.tensor(model2_results[\"Model Loss\"]),tc.tensor(loaded_model2_results[\"Model Loss\"]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
