visualising our data

--- a/custom_datasets/custom.ipynb
+++ b/custom_datasets/custom.ipynb
@@ -75,6 +75,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.1.1 Visuallising our image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from PIL import Image\n",
+    "\n",
+    "# set seed\n",
+    "tc.manual_seed(42)\n",
+    "\n",
+    "# 1. get all the image path\n",
+    "image_path_list = list(data_path.glob(\"*/*/*.jpg\"))\n",
+    "# image_path_list\n",
+    "\n",
+    "# 2. Plot random image\n",
+    "random_image_path = random.choice(image_path_list)\n",
+    "print(random_image_path)\n",
+    "\n",
+    "# 3. get the image class\n",
+    "image_class = random_image_path.parent.stem\n",
+    "print(image_class)\n",
+    "\n",
+    "# 4. open the image\n",
+    "img = Image.open(random_image_path)\n",
+    "\n",
+    "# 5. print meta data\n",
+    "print(f\"Random image path: {random_image_path}\")\n",
+    "print(f\"Image class: {image_class}\")\n",
+    "print(f\"Image Height: {img.height}\")\n",
+    "print(f\"Image width: {img.width}\")\n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img)\n",
+    "plt.axis(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_as_array = np.asarray(img)\n",
+    "img_as_array"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
