transforming our data

--- a/custom_datasets/custom.ipynb
+++ b/custom_datasets/custom.ipynb
@@ -18,8 +18,8 @@
     "import torch as tc\n",
     "from torch import nn\n",
     "# import torchvision\n",
-    "# from torchvision import datasets, transforms\n",
-    "# from torchvision.transforms import ToTensor\n",
+    "from torchvision import datasets, transforms\n",
+    "from torchvision.transforms import ToTensor\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -134,6 +134,69 @@
    "source": [
     "img_as_array = np.asarray(img)\n",
     "img_as_array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.2 Transforming our data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.2.1 Transform data with `torchvision.transform`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_transform = transforms.Compose([\n",
+    "  # resize the image\n",
+    "  transforms.Resize(size=(64,64)),\n",
+    "  # flip the image\n",
+    "  transforms.RandomHorizontalFlip(p=0.5),\n",
+    "  # Turn image into a torch tensor\n",
+    "  ToTensor()\n",
+    "])\n",
+    "\n",
+    "data_transform(img).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_transformed_images(images_paths,transform,n=3,seed=None):\n",
+    "  \"\"\"\n",
+    "    Selects random images from a path of images and loads/transforms them then plots the original vs the transformed version\n",
+    "  \"\"\"\n",
+    "  if seed:\n",
+    "    random.seed(seed)\n",
+    "    random_image_paths = random.sample(images_paths,k=n)\n",
+    "    for image_path in random_image_paths:\n",
+    "      with Image.open(image_path) as f:\n",
+    "        fig,ax = plt.subplots(nrows=1,ncols=2)\n",
+    "        ax[0].imshow(f)\n",
+    "        ax[0].set_title(f\"Origin\\nSize: {f.size}\")\n",
+    "        ax[0].axis(False)\n",
+    "        \n",
+    "        # transform and plot target image\n",
+    "        transformed_image = transform(f).permute(1,2,0) # not we will need to change the sahpe for the transform\n",
+    "        ax[1].imshow(transformed_image)\n",
+    "        ax[1].set_title(f\"Transformed\\nShape: {transformed_image.shape}\")\n",
+    "        ax[1].axis(False)\n",
+    "        \n",
+    "        fig.suptitle(f\"Class: {image_path.parent.stem}\", fontsize=16) \n",
+    "\n",
+    "plot_transformed_images(image_path_list,transform=data_transform,seed=42)"
    ]
   },
   {
