loading data image

--- a/custom_datasets/custom.ipynb
+++ b/custom_datasets/custom.ipynb
@@ -200,11 +200,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.3 Option1 Loading image data using ImageFolder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# use image folder to create datasets\n",
+    "train_data = datasets.ImageFolder(root=train_dir,transform=data_transform,target_transform=None)\n",
+    "test_data = datasets.ImageFolder(root=test_dir,transform=data_transform,target_transform=None)\n",
+    "\n",
+    "train_data,test_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# getting classnames\n",
+    "train_classnames = train_data.classes\n",
+    "train_classnames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Index on the train data datasets\n",
+    "img,label =  train_data[1][0], train_data[1][1]\n",
+    "# img,label\n",
+    "print(f\"Image Tensor:\\n{img}\") \n",
+    "print(f\"Image Shape:\\n{img.dtype}\") \n",
+    "print(f\"Image Datatype:\\n{img.dtype}\")\n",
+    "print(f\"Image Label:\\n{train_classnames[label]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rearrange the order of dimension\n",
+    "img_permute = img.permute(1,2,0)\n",
+    "\n",
+    "# print out different shapes\n",
+    "print(f\"Original shape: {img.shape} -> [color_channels, height, width]\")\n",
+    "print(f\"Image Permute shape: {img_permute.shape} -> [height, width, color_channels]\")\n",
+    "\n",
+    "# plot the image\n",
+    "plt.figure(figsize=(10,7))\n",
+    "plt.imshow(img_permute)\n",
+    "plt.axis(False)\n",
+    "plt.title(train_classnames[label],fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
