loading image with custom datasets

--- a/custom_datasets/custom.ipynb
+++ b/custom_datasets/custom.ipynb
@@ -266,13 +266,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.3.1 Turn loaded images into Dataloader"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "import os\n",
+    "os.cpu_count()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "BATCH_SIZE = 1\n",
+    "train_dataloader = DataLoader(\n",
+    "    dataset=train_data, batch_size=BATCH_SIZE, num_workers=os.cpu_count(), shuffle=True\n",
+    ")\n",
+    "test_dataloader = DataLoader(\n",
+    "    dataset=test_data, batch_size=BATCH_SIZE, num_workers=os.cpu_count(), shuffle=True\n",
+    ")\n",
+    "\n",
+    "len(train_dataloader),len(test_dataloader)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.4 Option2 Loading Image Data with a custom `Dataset`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Tuple,Dict,List\n",
+    "train_data.classes, train_data.class_to_idx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.4.1 Creating a helper function to get classnames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def \n",
+    "# setup target directory\n",
+    "target_directory = train_dir\n",
+    "print(f\"Target dir: {target_directory}\")\n",
+    "\n",
+    "# get the class names from the target directory\n",
+    "class_names_found = sorted([entry.name for entry in list(os.scandir(target_directory))])\n",
+    "class_names_found"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_classes(directory:str) -> Tuple[List[str],Dict[str,int]]:\n",
+    "  \"\"\"Finds the class folder names in a target directory.\"\"\"\n",
+    "  # 1. Get the class names by scanning the target directory\n",
+    "  classes = sorted(entry.name for entry in os.scandir(directory) if entry.is_dir())\n",
+    "  \n",
+    "  # 2. raise an error if class names nt found\n",
+    "  if not classes:\n",
+    "    raise FileNotFoundError(f\"Couldn't find any classes in {directory}...please check the file structure\")\n",
+    "  \n",
+    "  # 3. create a dictionary of index labels\n",
+    "  classes_to_idx = {class_name: i for i, class_name in enumerate(classes)}\n",
+    "  return classes, classes_to_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_classes(target_directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
