--- a/custom_datasets/custom.ipynb
+++ b/custom_datasets/custom.ipynb
@@ -371,6 +371,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.4.2 Create a custom `Dataset` to replicate `ImageFolder`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset\n",
+    "# 1. subclass\n",
+    "class ImageFolderCustom(Dataset):\n",
+    "  # 2. Inititalise the custom dataset\n",
+    "  def __init__(self,targ_dir:str,transform=None):\n",
+    "    # 3. create class attributes\n",
+    "    # get all the input image paths\n",
+    "    self.paths = list(Path(targ_dir).glob(\"*/*.jpg\"))\n",
+    "    # setup transforms\n",
+    "    self.transform = transform\n",
+    "    # create classes and class_to_idx\n",
+    "    self.classes,self.class_to_idx = find_classes(targ_dir)\n",
+    "    \n",
+    "  # 4. create a function to load images\n",
+    "  def load_image(self,index:int) -> Image.Image:\n",
+    "    \"\"\"Opens an image file paths and returns it\"\"\"\n",
+    "    image_path = self.paths[index]\n",
+    "    return Image.open(image_path)\n",
+    "  \n",
+    "  # 5. overwrite __len__()\n",
+    "  def __len__(self) -> int:\n",
+    "    \"\"\"Return total number of samples\"\"\"\n",
+    "    return len(self.paths)\n",
+    "  \n",
+    "  # 6. overwrite __getitem__\n",
+    "  def __getitem__(self,index:int) -> Tuple[tc.Tensor,int]:\n",
+    "    \"\"\"Returns one sample of data and label (X,y)\"\"\"\n",
+    "    img = self.load_image(index)\n",
+    "    class_name = self.paths[index].parent.name \n",
+    "    class_idx = self.class_to_idx[class_name]\n",
+    "    \n",
+    "    # Transform if necassary\n",
+    "    \n",
+    "    if self.transform:\n",
+    "      return self.transform(img) ,class_idx\n",
+    "    else:\n",
+    "      return img,class_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \n",
+    "train_transforms = transforms.Compose([\n",
+    "  transforms.Resize(size=(64,64)),\n",
+    "  transforms.RandomHorizontalFlip(p=0.5),\n",
+    "  transforms.ToTensor()\n",
+    "])\n",
+    "\n",
+    "test_transforms = transforms.Compose([\n",
+    "  transforms.Resize(size=(64,64)),\n",
+    "  transforms.ToTensor()\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test out ImageCustomFolder\n",
+    "train_data_custom = ImageFolderCustom(targ_dir=train_dir,transform=train_transforms)\n",
+    "test_data_custom = ImageFolderCustom(targ_dir=train_dir,transform=test_transforms)\n",
+    "train_data_custom,test_data_custom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check for equality between original ImageFolder Dataset and ImageFolderCustomDataset\n",
+    "print(train_data_custom.classes == train_data.classes)\n",
+    "print(test_data_custom.classes == test_data.classes)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
