created a function to visualize our custom data set

--- a/custom_datasets/custom.ipynb
+++ b/custom_datasets/custom.ipynb
@@ -465,6 +465,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.4.3 Create a custom function to display random images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. create a function to take in a dataset\n",
+    "def display_random_images(dataset:tc.utils.data.Dataset,classes:List[str] = None,n:int = 10,display_shape:bool = True,seed:int = None):\n",
+    "  # 2. Adjust display\n",
+    "  if n > 10:\n",
+    "    n = 10\n",
+    "    display_shape = False\n",
+    "    print(f\"For display purposes, n shouldn't be larger than 10, setting to 10 and removing shape display.\")\n",
+    "    \n",
+    "  # 3. set the random seed\n",
+    "  if seed:\n",
+    "    random.seed(seed)\n",
+    "    \n",
+    "  # 4. get rnadom indexes\n",
+    "  random_samples_idx = random.sample(range(len(dataset)),k=n)\n",
+    "  \n",
+    "  # 5. setup the plot\n",
+    "  plt.figure(figsize=(16,10))  \n",
+    "  \n",
+    "  # 6. loop through random sample images\n",
+    "  for i,targ_smaple in enumerate(random_samples_idx):\n",
+    "    targ_image,targ_label = dataset[targ_smaple][0],dataset[targ_smaple][1]\n",
+    "    \n",
+    "    # 7. Adjust tensor dimensions for plotting\n",
+    "    targ_image_adjust = targ_image.permute(1,2,0)\n",
+    "    \n",
+    "    # plot adjusted samples\n",
+    "    plt.subplot(1,n,i+1)\n",
+    "    plt.imshow(targ_image_adjust)\n",
+    "    plt.axis(False)\n",
+    "    \n",
+    "    if classes:\n",
+    "      title = f\"classes: {classes[targ_label]}\"\n",
+    "      if display_shape:\n",
+    "        title = title + f\"\\nShape: {targ_image_adjust.shape}\"\n",
+    "        \n",
+    "    plt.title(title)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \n",
+    "display_random_images(train_data,n=4,classes=train_classnames,seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_random_images(train_data_custom, n=4, classes=train_classnames, seed=42)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
