--- a/custom_datasets/custom.ipynb
+++ b/custom_datasets/custom.ipynb
@@ -576,6 +576,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.6 Other forms of transforms (data augmentation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_transform = transforms.Compose([\n",
+    "  transforms.Resize(size=(224,224)),\n",
+    "  transforms.TrivialAugmentWide(num_magnitude_bins=5),\n",
+    "  transforms.ToTensor()\n",
+    "])\n",
+    "\n",
+    "test_transform = transforms.Compose([\n",
+    "  transforms.Resize(size=(224,224)),\n",
+    "  transforms.ToTensor()\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_path_list[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot random transformed images\n",
+    "plot_transformed_images(images_paths=image_path_list,transform=train_transform,n=3,seed=42)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
