testing model with a forward pass

--- a/custom_datasets/custom.ipynb
+++ b/custom_datasets/custom.ipynb
@@ -727,7 +727,7 @@
     "        )\n",
     "\n",
     "        self.classifier = nn.Sequential(\n",
-    "            nn.Flatten(), nn.Linear(in_features=hidden_units, out_features=output_shape)\n",
+    "            nn.Flatten(), nn.Linear(in_features=hidden_units*16*16, out_features=output_shape)\n",
     "        )\n",
     "        \n",
     "    def forward(self,x):\n",
@@ -754,11 +754,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.7.3 Trying a forward pass on a single image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# get a single image batch\n",
+    "image_batch, label_batch = next(iter(train_dataloader_simple))\n",
+    "image_batch.shape,label_batch.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try a forward pass\n",
+    "model0(image_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from torch "
+   ]
   }
  ],
  "metadata": {
